# optargs

./: .gitmodules  .travis.sh  .travis.yml  README  README.md  meson.build  meson_options.txt  optargs.c  optargs.c.in  optargs.h  optargs_compiler_attributes.h  optargs_config.h.in
tst/: all_hidden.c  args_sample.inc  argument_tester.c  arguments_on_usage_line.c  cmocka-wrapper.h  help_text_sample_1.txt.in  help_text_sample_2.txt.in  help_text_sample_3.txt.in  help_text_sample_4.txt.in  help_text_sample_8.txt.in  help_text_sample_all_hidden.txt.in  help_text_sample_arguments_on_usage.txt.in  help_text_sample_minimal.txt.in  help_text_sample_option_arguments.txt.in  help_text_sample_readme.txt.in  help_text_sample_subargs.txt.in  huge_subargs_sample.inc  matcher.c  meson.build  minimal.c  option_arguments.c  option_tester.c  opts_sample.inc  readme.c  subargs.c  tester_1.c  tester_2.c  tester_3.c  tester_4.c  tester_5.c  tester_6-common_prefix.c  tester_7-first_arg.c  tester_8-ignore_hidden_option_length.c  tester_9-count_options.c  unit_tests.c
tst/system/: assert.h  stdlib.h
